--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: objective-c
-script: xctool -workspace Swizzlean.xcworkspace -scheme 'Swizzlean' -configuration Release -sdk iphonesimulator -arch i386 build
+script: xctool -project Swizzlean.xcodeproj -scheme Swizzlean build
