--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: objective-c
 script: xctool -project Swizzlean.xcodeproj -scheme Swizzlean -configuration Release -sdk iphonesimulator -arch i386 build
-script: xctool -project Specs.xcodeproj -scheme Specs -configuration Release -sdk iphonesimulator -arch i386 build
+script: xctool -project Swizzlean.xcodeproj -scheme Specs -configuration Release -sdk iphonesimulator -arch i386 build
