--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ before_install:
     - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script: 
   - xcodebuild -workspace Swizzlean.xcworkspace -scheme Swizzlean -sdk iphonesimulator -configuration Release build | xcpretty -c
+  - xcodebuild -workspace Swizzlean.xcworkspace -scheme Specs -sdk iphonesimulator -configuration Release test | xcpretty -c
