Update .travis.yml to run rake

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,4 @@ language: objective-c
 before_install:
     - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
     - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
-script: 
-  - xcodebuild -workspace Swizzlean.xcworkspace -scheme Swizzlean -sdk iphonesimulator -configuration Release build | xcpretty -c
-  - xcodebuild -workspace Swizzlean.xcworkspace -scheme Specs -sdk iphonesimulator -configuration Release test | xcpretty -c
-  - xcodebuild -workspace Swizzlean.xcworkspace -scheme IntegrationSpecs -sdk iphonesimulator -configuration Release test | xcpretty -c
+script: rake
