--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
 language: objective-c
-before_install:
-    - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
-    - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
+install: ./setup.sh
 script: rake
