Update project settings to be more modern (automatic and manual changes), delete old unused files, rename license filename

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,16 @@ profile
 DerivedData
 .idea/
 Pods/
+ObjectiveC.gcda
+ObjectiveC.gcno
 
+# Carthage
+Carthage
+Swizzlean.framework.zip
+
+# Fastlane
+fastlane/report.xml
+fastlane/.env*private*
+fastlane/test-output/
+fastlane/test_output/
+fastlane/README.md
