Replace Cedar with Specta/Expecta/OCMock, do some more updates, begin Cedar spec refactor process to new testing tools

--- a/Swizzlean.xcodeproj/xcshareddata/xcschemes/Swizzlean.xcscheme
+++ b/Swizzlean.xcodeproj/xcshareddata/xcschemes/Swizzlean.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "94BE1D921EA0722A0096916B"
+               BuildableName = "Specs.xctest"
+               BlueprintName = "Specs"
+               ReferencedContainer = "container:Swizzlean.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
