--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
+osx_image: xcode8.3
 language: objective-c
-install: ./setup.sh
-script: rake
+
+before_install:
+  - rvm install 2.3.1
+  - ./setup.sh
+
+script:
+  - bundle exec fastlane specs
