--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
           command: |
             echo "ruby-2.4.4" > ~/.ruby_version
             chruby 2.4.4
+            ruby -v
 
       - run:
           name: Bundle Gems
