--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,7 @@ jobs:
       - run:
           name: Bundle Gems
           command: |
-            echo "ruby-2.4.4" > ~/.ruby_version
-            chruby 2.4.4 && ruby -v
+            echo "ruby-2.4.4" > ~/.ruby-version
             gem install bundler
             bundle install
 
@@ -23,8 +22,8 @@ jobs:
 
       - run:
           name: Install CocoaPods
-          command: chruby 2.4.4 && bundle exec pod install
+          command: bundle exec pod install
 
       - run:
           name: Run specs
-          command: chruby 2.4.4 && bundle exec fastlane specs
+          command: bundle exec fastlane specs
