--- a/Swizzlean.xcodeproj/xcshareddata/xcschemes/Swizzlean.xcscheme
+++ b/Swizzlean.xcodeproj/xcshareddata/xcschemes/Swizzlean.xcscheme
@@ -26,7 +26,25 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "944C7B5C1EA261E5003A06C4"
+            BuildableName = "Specs.xctest"
+            BlueprintName = "Specs"
+            ReferencedContainer = "container:Swizzlean.xcodeproj">
+         </BuildableReference>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "944C7B451EA25FB5003A06C4"
+            BuildableName = "Swizzlean.framework"
+            BlueprintName = "Swizzlean"
+            ReferencedContainer = "container:Swizzlean.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
