--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-# Xcode
+# macOS
+
 .DS_Store
+
+# Xcode
+
 build/
+.build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -14,18 +19,23 @@ xcuserdata
 profile
 *.moved-aside
 DerivedData
-.idea/
 Pods/
 ObjectiveC.gcda
 ObjectiveC.gcno
 
 # Carthage
+
 Carthage
 Swizzlean.framework.zip
 
 # Fastlane
+
 fastlane/report.xml
 fastlane/.env*private*
 fastlane/test-output/
 fastlane/test_output/
 fastlane/README.md
+
+# Jetbrains
+
+.idea/
